Fixed navbar wider than container. A few more changes to look of navbar. Made it only visible when signed in

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -15,7 +15,7 @@
   }
 
   &.collapsed-timer {
-    padding: 10px;
+    padding: 5px 0;
   }
 
   #timer_buttons.collapsed-timer-buttons {
